# python_calculator

./: .gitignore  115.ipynb  README.md  pyproject.toml  setup.py  testing_calculator.py
Calculator/: calculator.py
Calculator_karutka.egg-info/: PKG-INFO  SOURCES.txt
contacts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
