[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="Calculator_karutka_2023"
version='0.0.1'
authors=[{name = "Kasparas Rutkauskas", email = "kasparas.r7@gmail.com"}]
description="A calculator package used for summation, subtraction, multiplication, division and taking a root out of a stored value"
readme = "README.md"
requires_python = ">=3.7"
classifiers=[
    'Intended Audience :: Learning',
    'License :: OSI Approved :: MIT License',  
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]